--- a/page1.html
+++ b/page1.html
@@ -8,7 +8,7 @@
 <body>
     <h1>First Page</h1>
     <p>This is the first page of the Website.</p><br>
-    <a href="index.html">Go to back to Index page</a><br>
-    <a href="page2.html">Go to the second page</a>
+    <a href="https://ishakarki2414238.s3.us-east-1.amazonaws.com/index.html">Go to back to Index page</a><br>
+    <a href="https://main.d7grcit9x29e7.amplifyapp.com/page2.html">Go to the second page</a>
 </body>
 </html>
