--- a/page2.html
+++ b/page2.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Second Page</h1>
     <p>This is the second page of the Website.</p><br>
-    <a href="index.html">Go to back to Index page</a><br>
-    <a href="page1.html">Go to the first page</a>
+    <a href="https://ishakarki2414238.s3.us-east-1.amazonaws.com/index.html">Go to back to Index page</a><br>
+    <a href="https://main.d7grcit9x29e7.amplifyapp.com/page1.html">Go to the first page</a>
 </body>
 </html>
